# text_adventure

./: .gitignore  README.md  env.sample  game.py  pyproject.toml
.github/: copilot-instructions.md
docs/docs/: Spec.md
docs/docs/.obsidian/: workspace.json
docs/docs/Game_Engine/: 1. Detailed Game Engine Blueprint.md  2. Narrative Graph Tasks.md  3. Game State manager.md  4. Command Parser.md  5. Event Triggers & Action Handlers.md  6. AI-Driven Content Generation.md
docs/docs/General_Prompts/: 1. Specific Blueprint.md  2. Specific Tasks.md
docs/docs/Notes/: Commands vs Events.md
models/: __init__.py  action.py  game_state.py  generated_content.py  item.py  location.py  narrative_prompt.py  player.py  story_memory.py
narrative_engine/: ai_generator.py  commands.py  events.py  game_state.py  graph.py  narrative_memory.py
scripts/: get_state.http  init_game.http  move_direction.http  pickup_item.http  send_command.http  test_door_event.http
tests/narrative_engine/: ai_generator_tests.py  commands_tests.py  events_tests.py  game_state_tests.py  graph_tests.py  narrative_memory_tests.py
